[gd_scene load_steps=18 format=2]

[ext_resource path="res://Asset/Background/bg5.jpg" type="Texture" id=1]
[ext_resource path="res://Asset/Script/Main.gd" type="Script" id=2]
[ext_resource path="res://Asset/Script/BulletManager.gd" type="Script" id=3]
[ext_resource path="res://Asset/Scene/Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://Asset/Scene/MapAI.tscn" type="PackedScene" id=5]
[ext_resource path="res://Asset/Scene/CaptureBase.tscn" type="PackedScene" id=6]
[ext_resource path="res://Asset/Scene/Ally.tscn" type="PackedScene" id=7]
[ext_resource path="res://Asset/Script/CaptureBaseManager.gd" type="Script" id=8]
[ext_resource path="res://Asset/Asteroid/small/a10002.png" type="Texture" id=9]
[ext_resource path="res://Asset/Background/spr_stars01.png" type="Texture" id=10]
[ext_resource path="res://Asset/Asteroid/large/a10002.png" type="Texture" id=11]
[ext_resource path="res://Asset/Asteroid/large/a10004.png" type="Texture" id=12]
[ext_resource path="res://Asset/Asteroid/large/a30001.png" type="Texture" id=13]
[ext_resource path="res://Asset/Asteroid/medium/a10012.png" type="Texture" id=14]
[ext_resource path="res://Asset/Asteroid/large/a10007.png" type="Texture" id=15]
[ext_resource path="res://Asset/Asteroid/medium/a10002.png" type="Texture" id=16]
[ext_resource path="res://Asset/Asteroid/medium/a10007.png" type="Texture" id=17]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 1319, 320 )
rotation = 0.66636
current = true
limit_left = -1
limit_top = -1
limit_right = 3500
limit_bottom = 3500
smoothing_enabled = true

[node name="CaptureBaseManager" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="CaptureBase" parent="CaptureBaseManager" instance=ExtResource( 6 )]
position = Vector2( 988, 612 )

[node name="CaptureBase2" parent="CaptureBaseManager" instance=ExtResource( 6 )]
position = Vector2( 2010, 598 )

[node name="CaptureBase3" parent="CaptureBaseManager" instance=ExtResource( 6 )]
position = Vector2( 1324, 1553 )

[node name="BulletManager" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="AllyMapAI" parent="." instance=ExtResource( 5 )]
team_name = 1
unit = ExtResource( 7 )

[node name="EnemyMapAI" parent="." instance=ExtResource( 5 )]
base_capture_start_order = 1
team_name = 2
unit = ExtResource( 4 )

[node name="EnemyRespawnPoints" type="Node2D" parent="."]

[node name="Position2D5" type="Position2D" parent="EnemyRespawnPoints"]
position = Vector2( 2515.25, 937.248 )
rotation = 1.309

[node name="Position2D6" type="Position2D" parent="EnemyRespawnPoints"]
position = Vector2( 1880.25, 994.248 )
rotation = 1.309

[node name="Position2D7" type="Position2D" parent="EnemyRespawnPoints"]
position = Vector2( 1851.25, 1238.25 )
rotation = 1.309

[node name="Position2D8" type="Position2D" parent="EnemyRespawnPoints"]
position = Vector2( 1841.25, 1543.25 )
rotation = 1.309

[node name="AllyRespawnPoints" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="AllyRespawnPoints"]
position = Vector2( 829, 102 )

[node name="Position2D2" type="Position2D" parent="AllyRespawnPoints"]
position = Vector2( 194, 159 )

[node name="Position2D3" type="Position2D" parent="AllyRespawnPoints"]
position = Vector2( 165, 403 )

[node name="Position2D4" type="Position2D" parent="AllyRespawnPoints"]
position = Vector2( 155, 708 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 1678, 1091 )
scale = Vector2( 2.61406, 2.13672 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 1682, 3273 )
rotation = 3.13854
scale = Vector2( 2.61406, 2.13672 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 5018, 3279 )
rotation = 0.00699472
scale = Vector2( 2.61406, 2.13672 )
texture = ExtResource( 1 )

[node name="Sprite4" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 5017, 1131 )
rotation = 3.14664
scale = Vector2( 2.61406, 2.13672 )
texture = ExtResource( 1 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 2, 2 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 3007, 457 )
texture = ExtResource( 11 )

[node name="Sprite6" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 1354, 361 )
texture = ExtResource( 12 )

[node name="Sprite7" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 2886, 1928 )
texture = ExtResource( 15 )

[node name="Sprite8" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 976, 1802 )
texture = ExtResource( 13 )

[node name="Sprite9" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 2085, 1127 )
texture = ExtResource( 16 )

[node name="Sprite10" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 1062, 1087 )
texture = ExtResource( 17 )

[node name="Sprite11" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 2730, 1420 )
texture = ExtResource( 14 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 668, 814 )
texture = ExtResource( 9 )

[node name="Sprite3" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 1525, 462 )
texture = ExtResource( 9 )

[node name="Sprite4" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 1601, 967 )
texture = ExtResource( 9 )

[node name="Sprite5" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 1080, 1123 )
texture = ExtResource( 9 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 3, 3 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2( 1672.5, 1041 )
scale = Vector2( 1.30273, 1 )
texture = ExtResource( 10 )
